# vector-db-learning

./: .gitignore  01_Foundations.ipynb  02_ChromaDB.ipynb  LICENSE  README.md  pyproject.toml
